docs: correct roadmap claims disproved by orchestrator experiments
Nine experiments (E-3..E-11) run against the real 4.13.0 jars, Mill 1.1.7
and both JDK 21 and 25. Four ROADMAP claims did not survive:

- 3.6 said finalize() is disabled on JDK 25. It is not: 200k/200k
  finalizers ran on 25.0.3 and 21.0.10. The Mat pitch survives on a
  different and stronger mechanism -- absent heap pressure, measured at
  41x RSS on both JDKs -- so the section is rewritten around numbers.
- 2 said Mill auto-provisions zulu 25. It provisions zulu 21.0.10.
- 3.2 printed pseudo-code that would not run. Replaced with the Scala
  that Mill actually compiled and ran headless, plus the four gotchas
  that break a naive implementation.
- 3.4 was high-confidence. A reachable Wayback snapshot of upstream
  closes it: no license, ever. Moved F1 to a new M0.5 ahead of Track A,
  since it gates whether the rewrite may reuse anything.

Two new blockers found:

- 3.7 Mill's publish model has no classifier field, so the verified
  build-time classifier syntax is silently stripped from the POM.
  Consumers would resolve zero natives while our CI stayed green.
- 3.8 Only 3 of 188 org.opencv native types expose release(). The other
  185 -- including every class B10-B13 wraps -- need a MethodHandle
  bridge to a private delete(long), worth 634x RSS. Getting its guard
  wrong is a SIGSEGV, not an exception, so B3 gains an atomic release
  flag and B3b.

Adds NOTES-experiments.md with the full command output.